// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create ticks for interval: -1 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -1000000,
  -100000,
  -10000,
  -1000,
  -100,
  -10,
  -1,
  -0.1,
]
`;

exports[`should create ticks for interval: -2 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -100000,
  -1000,
  -10,
  -0.1,
]
`;

exports[`should create ticks for interval: -10 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -0.1,
]
`;

exports[`should create ticks for interval: 0 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  1,
  100,
  10000,
  1000000,
]
`;

exports[`should create ticks for interval: 0.1 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  0.1258925411794167,
  0.15848931924611132,
  0.199526231496888,
  0.251188643150958,
  0.31622776601683794,
  0.39810717055349726,
  0.5011872336272724,
  0.6309573444801932,
  0.7943282347242815,
  1,
  1.2589254117941673,
  1.5848931924611136,
  1.9952623149688795,
  2.51188643150958,
  3.1622776601683795,
  3.9810717055349722,
  5.011872336272722,
  6.309573444801933,
  7.943282347242816,
  10,
  12.589254117941675,
  15.848931924611133,
  19.952623149688797,
  25.118864315095795,
  31.622776601683793,
  39.810717055349734,
  50.11872336272722,
  63.09573444801933,
  79.43282347242814,
  100,
  125.89254117941675,
  158.48931924611142,
  199.52623149688787,
  251.18864315095797,
  316.2277660168379,
  398.1071705534973,
  501.18723362727246,
  630.957344480193,
  794.3282347242814,
  1000,
  1258.9254117941675,
  1584.893192461114,
  1995.2623149688789,
  2511.88643150958,
  3162.277660168379,
  3981.0717055349733,
  5011.872336272725,
  6309.57344480193,
  7943.282347242814,
  10000,
  12589.254117941662,
  15848.93192461114,
  19952.62314968879,
  25118.864315095823,
  31622.776601683792,
  39810.71705534969,
  50118.72336272725,
  63095.7344480193,
  79432.82347242822,
  100000,
  125892.54117941661,
  158489.3192461114,
  199526.23149688786,
  251188.6431509582,
  316227.7660168379,
  398107.1705534969,
  501187.2336272725,
  630957.344480193,
  794328.2347242822,
  1000000,
  1258925.411794166,
  1584893.1924611141,
  1995262.3149688789,
  2511886.4315095823,
  3162277.6601683795,
  3981071.7055349695,
  5011872.336272725,
  6309573.44480193,
  7943282.347242821,
  10000000,
]
`;

exports[`should create ticks for interval: 0.5 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  0.31622776601683794,
  1,
  3.1622776601683795,
  10,
  31.622776601683793,
  100,
  316.2277660168379,
  1000,
  3162.277660168379,
  10000,
  31622.776601683792,
  100000,
  316227.7660168379,
  1000000,
  3162277.6601683795,
  10000000,
]
`;

exports[`should create ticks for interval: 1 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -1000000,
  -100000,
  -10000,
  -1000,
  -100,
  -10,
  -1,
  -0.1,
]
`;

exports[`should create ticks for interval: 1 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  1,
  10,
  100,
  1000,
  10000,
  100000,
  1000000,
  10000000,
]
`;

exports[`should create ticks for interval: 2 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -100000,
  -1000,
  -10,
  -0.1,
]
`;

exports[`should create ticks for interval: 2 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  10,
  1000,
  100000,
  10000000,
]
`;

exports[`should create ticks for interval: 3 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  100,
  100000,
]
`;

exports[`should create ticks for interval: 4 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  1000,
  10000000,
]
`;

exports[`should create ticks for interval: 5 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  10000,
]
`;

exports[`should create ticks for interval: 6 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  100000,
]
`;

exports[`should create ticks for interval: 7 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  1000000,
]
`;

exports[`should create ticks for interval: 10 domain: [-10000000, -0.1] case 1`] = `
NumericTicks [
  -10000000,
  -0.1,
]
`;

exports[`should create ticks for interval: 10 domain: [0.1, 10000000] case 1`] = `
NumericTicks [
  0.1,
  10000000,
]
`;
